--- a/stylesheets/less/footer.less
+++ b/stylesheets/less/footer.less
@@ -1,26 +1,25 @@
 @footer-background-color: #fff;
-@footer-text-color:#5ca0f2;
+@footer-text-color: #5ca0f2;
 
-footer
-{   
+footer {
     height: 50px;
-    width: 100%;    
+    width: 100%;
     bottom: 0;
     position: fixed;
-    background-color: @footer-background-color;  
+    background-color: @footer-background-color;
 
-    .footer-content{
+    .footer-content {
         justify-content: center;
         display: flex;
         width: auto;
-        align-items: center;    
+        align-items: center;
         height: 100%;
 
-        .footer-copyright{
-           color: @footer-text-color;
+        .footer-copyright {
+            color: @footer-text-color;
         }
 
-        .footer-link{
+        .footer-link {
             text-decoration: none;
             color: @footer-text-color;
         }
