--- a/stylesheets/less/Store.less
+++ b/stylesheets/less/Store.less
@@ -5,102 +5,135 @@ body {
     background: linear-gradient(to right, #f5f7f6, #5ca0f2);
     color: #D7D7EF;
     font-family: 'Lato', sans-serif;
-    margin: 0;    
+    margin: 0;
 }
 
-main{
+main {
     padding: 0 50px;
-    
+
     flex-direction: row;
     justify-content: space-between;
-    .card-wrapper{
-        display: inline-flex;
-        max-width: 260px;
-        margin: 50px 30px;
-        padding: 10px;
-        border:3px solid #fff;
-        border-radius: 16px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        
-        background: #fff;
+}
 
-        .card{
+.card-wrapper {
+    display: inline-flex;
+    max-width: 260px;
+    margin: 50px 30px;
+    padding: 10px;
+    border: 3px solid #fff;
+    border-radius: 16px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+
+    background: #fff;
+
+    .card {
+        display: flex;
+        flex-direction: column;
+
+
+        .card-img-wrapper {
             display: flex;
-            flex-direction: column;
-            
+            justify-content: center;
+            height: 250px;
 
-            .card-img-wrapper{
-                display: flex;
-                justify-content: center;
-        
-                .card-img{
-                    max-height: 250px;
-                    max-width: 230px;
-                }
+            .card-img {
+                max-height: 250px;
+                max-width: 230px;
             }
+        }
 
-            .card-description-wrapper{
-                padding: 10px;
-                display: flex;
-                height: 80px;
+        .card-description-wrapper {
+            padding: 10px;
+            display: flex;
+            height: 80px;
+            width: 230px;
 
-                .card-description{
-                    height: 100%;
-                    overflow-y:scroll;
-                    color: gray;
-                    text-overflow: ellipsis;
-                    
-                    &::-webkit-scrollbar {
-                        width: 12px;
-	                    background-color: #F5F5F5;
-                    }
+            .card-description {
+                height: 100%;
+                overflow-y: scroll;
+                color: gray;
+                text-overflow: ellipsis;
+                width: 230px;
 
-                   &::-webkit-scrollbar-track {
-                    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+                &::-webkit-scrollbar {
+                    width: 12px;
+                    background-color: #F5F5F5;
+                }
+
+                &::-webkit-scrollbar-track {
+                    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
                     border-radius: 10px;
                     background-color: #F5F5F5;
-                    }
+                }
 
-                   &::-webkit-scrollbar-thumb {
+                &::-webkit-scrollbar-thumb {
                     border-radius: 10px;
-                    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+                    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
                     background-color: gray;
-                    }
+                }
+            }
+        }
+
+        .card-btn-wrapper {
+            padding: 10px 0;
+            display: flex;
+            height: 40px;
+            position: relative;
+            width: 100%;
+            justify-content: right;
+
+            .card-btn {
+                display: flex;
+                margin: 10px;
+                background-color: transparent;
+                border: 2px solid gray;
+                align-items: center;
+                font-weight: bold;
+                color: gray;
+                height: 40px;
+                background-color: transparent;
+                border-radius: 8px;
+
+                &:hover {
+                    background-color: rgba(255, 255, 255, 0.3);
+                }
+
+                &:focus {
+                    outline-color: transparent;
+                }
+
+                &:active {
+                    color: gray;
                 }
             }
 
-            .card-btn-wrapper{
-                padding: 10px 0;
-                display: flex;  
+            .card-btn-added {
+                display: flex;
+                margin: 10px;                
+                border: 2px solid #fff;
+                align-items: center;
+                font-weight: bold;
+                color: #fff;
                 height: 40px;
-                position: relative;
-                width: 100%;
-                justify-content: right;
+                background-color: #5ca0f2;
+                border-radius: 8px;
 
-                .card-btn{
-                    display: flex;   
-                    margin: 10px;
-                    background-color: transparent;
-                    border: 2px solid gray;
-                    align-items: center;                        
-                    font-weight: bold;
-                    color: gray;                   
-                    height: 40px;
-                    background-color: transparent;                           
-                    border-radius: 8px;            
-                    
-                    &:hover{
-                        background-color: rgba(255, 255, 255, 0.3);                      
-                    }
-            
-                    &:focus{
-                        outline-color: transparent;                                
-                    }
-
-                    &:active{
-                        color: gray;
-                    }
+                &:hover {
+                    background-color: rgba(255, 255, 255, 0.3);                    
                 }
+
+                &:focus {
+                    background-color: #5ca0f2;
+                }
+
+                &:active {
+                    color: gray;
+                }
+
+                &:visited {
+                    background-color: #5ca0f2;
+                }
+
             }
         }
     }
